<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".travail.InscriptionActivity">

    <!-- Titre de la page d'accueil -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenue aux Joueurs"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contenu de votre page d'accueil -->
    <LinearLayout
        android:id="@+id/playerNamesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Contenu de LinearLayout -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Joueur 1 :"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextPlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Le nom du joueur 1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Joueur 2 :"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextPlayer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            android:hint="Le nom du joueur 2"
            android:inputType="text" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="Jouer !"
            android:textSize="35sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
